--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "nanoid": "^3.1.20",
     "next": "^9.5.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
